[package]
authors = ["Sean Bowe <ewillbefull@gmail.com>"]
description = "zk-SNARK library"
documentation = "https://github.com/ebfull/bellman"
homepage = "https://github.com/ebfull/bellman"
license = "MIT/Apache-2.0"
name = "bellman"
repository = "https://github.com/ebfull/bellman"
version = "0.1.0"

[dependencies]
rand = "0.4"
bit-vec = "0.4.4"
futures = "0.1"
futures-cpupool = { version = "0.1", optional = true }
num_cpus = { version = "1", optional = true }
crossbeam = { version = "0.7.1", optional = true }
pairing = { path = "../pairing" }
byteorder = "1"

[features]
default = []
multithread = ["futures-cpupool", "num_cpus", "crossbeam"]
